# demo-project

./: .env  .env.example  .gitignore  Docker.aws.json  Dockerfile  Jenkinsfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
apps/auto_parks/: serializers.py  views.py
apps/cars/: views.py
apps/cars/migrations/: 0005_carmodel_photo.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0003_profilemodel_avatar_alter_profilemodel_age_and_more.py  0004_alter_profilemodel_avatar.py  0005_alter_usermodel_is_active_alter_usermodel_is_staff_and_more.py
backend/apps/accounts/: urls.py  views.py
backend/apps/auth/: urls.py  views.py
backend/apps/auto_parks/: models.py  urls.py  views.py
backend/apps/cars/: consumer.py  filters.py  managers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py
backend/apps/price_convertor/: apps.py  models.py  serializers.py
backend/apps/test_email/: urls.py  views.py
backend/apps/users/: models.py  serializers.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  drf_yasg_conf.py  google_conf.py  (+4 more)
backend/core/: pagination.py  permissions.py
backend/templates/: spam.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py
core/handlers/: error_handler.py
core/services/: jwt_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  index.js  router.js
(+56 files in other folders)
